--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,3 +1,36 @@
 .navbar {
-  background-color:  rgb(33, 31, 109) !important;
+  background-color: #333 !important;
+  overflow: hidden;
+}
+
+.navbar li {
+	display:block;
+	width:120px;
+	float:left;
+	margin-left:2px;
+}
+
+.navbar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
+.btn-primary {
+	float: right;
 }
